# HTMX-test

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
project/: .env  db.sqlite3  mkdocs.yml
project/apps/core/: urls.py  views.py
project/apps/core/templates/: base.html  index.html
project/apps/core/tests/: views_test.py
project/config/: settings.py  urls.py
project/config/extra/: settings_allauth.py  settings_debug.py  settings_django_htmx.py
project/docs/: CHANGELOG.md  commits.md  index.md
project/docs/apps/: index.md
project/docs/apps/core/: index.md
project/staticfiles/css/: output.css
project/templates/: components.yaml
project/templates/atomics/: button.html  h1.html  message.html
project/templates/containers/: column.html  section.html
